config/objects/Fuel__c.object
<CustomObject>
    <fields>
        <fullName>Is_Editable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Editable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Selected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Selected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Period_End__c</fullName>
        <label>Period End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Period_Start__c</fullName>
        <label>Period Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Price_Per_Gallon__c</fullName>
        <label>Price Per Gallon</label>
        <precision>4</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>US</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Fuel</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Region__c</columns>
        <columns>Period_Start__c</columns>
        <columns>Period_End__c</columns>
        <columns>Price_Per_Gallon__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Fuel Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fuel</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>